--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Michael's favorite things.</title>
   </head>
   <body>
+    <h1><em>You are awesome!</em></h1>
     <h1>My favourite things</h1>
     <h2>These area few of my favorite things.</h2>
 
